--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     </style>
   </head>
   <body>
-    <a href="/app" class="app-button-nav"> Go to App </a>
+    <a href="https://app.konduit.channel" class="app-button-nav"> Go to App </a>
 
     <!-- Hero Section -->
     <header id="hero">
